switched to vercel analytics from firebase analytics

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emailjs/browser": "^4.2.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
