--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mdi/react": "^1.6.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "blurhash": "^2.0.5",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0",
