--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "blurhash": "^2.0.5",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "^6.23.0",
     "react-scroll": "^1.9.0",
-    "simple-icons": "^11.7.0"
+    "simple-icons": "^11.7.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
